# konbini

./: CMakeLists.txt  Install.md  README.md
dockers/: cpu.Dockerfile  go_cpu.Dockerfile  go_gpu.Dockerfile  gpu.Dockerfile  python_cpu.Dockerfile  python_gpu.Dockerfile
tests/cuda_smart_pointer/: CMakeLists.txt  Readme.md  vector_add_shared_ptr.cu
tests/gpu_std_vector/: CMakeLists.txt  Readme.md
tests/kmeans_cpu/: 2d_dataset.txt  3d_dataset.txt  CMakeLists.txt  generate2d_dataset.py  generate3d_dataset.py  knn_cpu.h  mini_kmeans.cpp
tests/kmeans_gpu/: Readme.md
tests/knn_cpu/: CMakeLists.txt  Readme.md  knn_cpu.cpp  knn_cpu.h  main.cpp  mini_knn.cpp  utils.h
tests/knn_gpu/: CMakeLists.txt  main.cpp  mini_knn.cu
tests/sqlite_python/: Readme.md  sample.db  sqlite_memory.py  test_sqlite.py  test_vectordb.py  vectordb.py
